<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clEmptyInboxRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="30dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmptyBoxHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/empty_inbox_header"
        android:textColor="@color/text_black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvClickToRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/click_to_refresh"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmptyBoxHeader" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/refresh_button_background"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClickToRefresh">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivRefresh"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="2dp"
            android:src="@drawable/icon_refresh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvRefresh" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="3dp"
            android:paddingEnd="7dp"
            android:text="@string/icon_refresh"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>